# src/api/controllers/pandaScore.js
@@ -1,5 +1,6 @@
 import {
-    Videogame
+    Videogame,
+    Match
 } from '../../models';
 import MiddlewareSingleton from '../helpers/middleware';
 
@@ -27,6 +28,34 @@ async function getVideoGamesAll(req, res) {
     }
 }
 
+async function getGameMatches(req, res) {
+    try {
+        let params = req.body;
+        let match = new Match(params);
+        let data = await match.getGameMatches();
+        MiddlewareSingleton.log({ type: "global", req, code: 200 });
+        MiddlewareSingleton.respond(res, req, data);
+    } catch (err) {
+        MiddlewareSingleton.log({ type: "global", req, code: err.code });
+        MiddlewareSingleton.respondError(res, err);
+    }
+}
+
+async function getSpecificMatch(req, res) {
+    try {
+        let params = req.body;
+        let match = new Match(params);
+        let data = await match.getSpecificMatch();
+        MiddlewareSingleton.log({ type: "global", req, code: 200 });
+        MiddlewareSingleton.respond(res, req, data);
+    } catch (err) {
+        MiddlewareSingleton.log({ type: "global", req, code: err.code });
+        MiddlewareSingleton.respondError(res, err);
+    }
+}
+
 export {
-    getVideoGamesAll
+    getVideoGamesAll,
+    getGameMatches,
+    getSpecificMatch
 }
